--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
           <ul class="nav nav-pills">
             <li><a href="#">About</a></li>
             <li><a href="#">Artists</a></li>
+            <li><a href="#">Media</a></li>
+            <li><a href="#">Events</a></li>
             <li><a href="#">Partners</a></li>
           </ul>
         </div>
@@ -54,6 +56,8 @@
         <ul class="nav nav-pills">
             <li><a href="#">About</a></li>
             <li><a href="#">Artists</a></li>
+            <li><a href="#">Media</a></li>
+            <li><a href="#">Events</a></li>
             <li><a href="#">Partners</a></li>
         </ul>
       </div>
