--- a/partners.html
+++ b/partners.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home | Marid</title>
+    <title>Partners | Marid</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Independent Record Label">
 
@@ -64,17 +64,6 @@
     </div>
 
     <div class="content">
-      <div id="about">
-  <div class="container">
-    <div id="profile-pic">
-      <img src="/assets/img/logo.jpg">
-    </div>
-    <div id="about-main">
-      <h1>Independent Record Label</h1>
-      <p>Community-Driven Artist Accelerator</p>
-    </div>
-  </div>
-</div>
 
     </div>
 
