gallery added, hover effects added

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Independent Record Label">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="/assets/css/bootstrap.css">
-    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/assets/css/header.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/syntax.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/syntax.css">
 
     <!-- Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Lato:400,300'
@@ -23,24 +23,24 @@
     <![endif]-->
 
     <!-- Favicons -->
-    <link rel="shorcut icon" href="/favicon.png">
+    <link rel="shorcut icon" href="favicon.png">
 
   </head>
   <body>
     <div id="desktop-header" class="header visible-lg visible-md">
       <div class="container">
         <div class="title">
-          <a href="/">
+          <a href="">
             <h1>Marid</h1>
           </a>
         </div>
         <div class="navigation">
           <ul class="nav nav-pills">
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/artists.html">Artists</a></li>
-            <li><a href="/media.html">Media</a></li>
-            <li><a href="/events.html">Events</a></li>
-            <li><a href="/partners.html">Partners</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="artists.html">Artists</a></li>
+            <li><a href="media.html">Media</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="partners.html">Partners</a></li>
           </ul>
         </div>
       </div>
@@ -48,17 +48,17 @@
 
     <div id="mobile-header" class="header visible-xs visible-sm">
       <div class="title">
-        <a href="/">
+        <a href="">
           <h1>Marid</h1>
         </a>
       </div>
       <div class="menu">
         <ul class="nav nav-pills">
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/artists.html">Artists</a></li>
-            <li><a href="/media.html">Media</a></li>
-            <li><a href="/events.html">Events</a></li>
-            <li><a href="/partners.html">Partners</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="artists.html">Artists</a></li>
+            <li><a href="media.html">Media</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="partners.html">Partners</a></li>
         </ul>
       </div>
     </div>
@@ -67,7 +67,7 @@
       <div id="about">
   <div class="container">
     <div id="profile-pic">
-      <img src="/assets/img/logo.jpg">
+      <img src="assets/img/logo.jpg">
     </div>
     <div id="about-main">
       <h1>Independent Record Label</h1>
@@ -85,15 +85,15 @@
           <div class="col-lg-6">
             <div id="social">
               <a href="#">
-                <img src="/assets/img/rss.png"></a>
+                <img src="assets/img/rss.png"></a>
               <a href="http://twitter.com/maridco">
-                <img src="/assets/img/twitter.png"/></a>
+                <img src="assets/img/twitter.png"/></a>
               <a href="http://github.com/maridco">
-                <img src="/assets/img/github.png"/></a>
+                <img src="assets/img/github.png"/></a>
               <a href="http://www.linkedin.com/in/company/marid">
-                <img src="/assets/img/linkedin.png"/></a>
+                <img src="assets/img/linkedin.png"/></a>
               <a href="mailto:info@marid.co">
-                <img src="/assets/img/email.png"/></a>
+                <img src="assets/img/email.png"/></a>
             </div>
           </div>
           <div class="col-lg-6">
@@ -105,7 +105,7 @@
       </div>
     </div>
     <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-    <script src="/assets/js/libs/bootstrap.js"></script>
+    <script src="assets/js/libs/bootstrap.js"></script>
   </body>
 </html>
 
