--- a/artists.html
+++ b/artists.html
@@ -23,7 +23,7 @@
     <![endif]-->
 
     <!-- Favicons -->
-    <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/demo.css" /> -->
     <link rel="stylesheet" type="text/css" href="assets/css/style_common.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style1.css" /  >
     <link rel="shorcut icon" href="favicon.png">
