Home redirection fixed when clicking 'Marid'

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <div id="desktop-header" class="header visible-lg visible-md">
       <div class="container">
         <div class="title">
-          <a href="">
+          <a href="index.html">
             <h1>Marid</h1>
           </a>
         </div>
-        <div class="navigation">
+`        <div class="navigation">
           <ul class="nav nav-pills">
             <li><a href="about.html">About</a></li>
             <li><a href="artists.html">Artists</a></li>
@@ -48,7 +48,7 @@
 
     <div id="mobile-header" class="header visible-xs visible-sm">
       <div class="title">
-        <a href="">
+        <a href="index.html">
           <h1>Marid</h1>
         </a>
       </div>
