--- a/artists.html
+++ b/artists.html
@@ -33,7 +33,7 @@
     <div id="desktop-header" class="header visible-lg visible-md">
       <div class="container">
         <div class="title">
-          <a href="">
+          <a href="index.html">
             <h1>Marid</h1>
           </a>
         </div>
@@ -51,7 +51,7 @@
 
     <div id="mobile-header" class="header visible-xs visible-sm">
       <div class="title">
-        <a href="">
+        <a href="index.html">
           <h1>Marid</h1>
         </a>
       </div>
