--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1>Marid</h1>
           </a>
         </div>
-`        <div class="navigation">
+        <div class="navigation">
           <ul class="nav nav-pills">
             <li><a href="about.html">About</a></li>
             <li><a href="artists.html">Artists</a></li>
