--- a/artists.html
+++ b/artists.html
@@ -30,7 +30,7 @@
     <div id="desktop-header" class="header visible-lg visible-md">
       <div class="container">
         <div class="title">
-          <a href="/">
+          <a href="index.html">
             <h1>Marid</h1>
           </a>
         </div>
