--- a/artists.html
+++ b/artists.html
@@ -30,7 +30,7 @@
     <div id="desktop-header" class="header visible-lg visible-md">
       <div class="container">
         <div class="title">
-          <a href="index.html">
+          <a href="/">
             <h1>Marid</h1>
           </a>
         </div>
@@ -48,7 +48,7 @@
 
     <div id="mobile-header" class="header visible-xs visible-sm">
       <div class="title">
-        <a href="index.html">
+        <a href="/">
           <h1>Marid</h1>
         </a>
       </div>
